--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                 </h1>
                 <p class="text-xl md:text-2xl text-coast-sky mb-6">Simple sites. Strong results.</p>
                 <p class="text-lg mb-8">Mobile-ready, SEO-tuned, hosted on AWS S3.</p>
-                <a href="#contact" class="btn-primary">Get Your Free Site Audit</a>
+                <div class="flex flex-col items-start space-y-4">
+                    <a href="#contact" class="btn-primary">Get Your Free Site Audit</a>
+                    <p class="text-sm text-gray-600">No obligation, just valuable insights for your business</p>
+                </div>
             </div>
         </div>
     </section>
