--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
                 </h1>
                 <p class="text-xl md:text-2xl text-coast-sky mb-6">Simple sites. Strong results.</p>
                 <p class="text-lg mb-8">Mobile-ready, SEO-tuned, hosted on AWS S3.</p>
-                <div class="flex flex-col items-start space-y-4">
-                    <a href="#contact" class="btn-primary">Get Your Free Site Audit</a>
-                    <p class="text-sm text-gray-600">No obligation, just valuable insights for your business</p>
+                <div class="cta-container">
+                    <div class="flex flex-col items-start space-y-4">
+                        <a href="#contact" class="btn-primary">Get Your Free Site Audit</a>
+                        <p class="text-sm text-gray-600">No obligation, just valuable insights for your business</p>
+                    </div>
                 </div>
             </div>
         </div>
