--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
         </div>
     </nav>
 
+    <div class="mobile-menu md:hidden fixed inset-0 bg-white z-40 flex flex-col items-center justify-center space-y-8 text-2xl font-poppins font-bold transition-transform duration-300 translate-x-full">
+        <a href="#home" class="nav-link">Home</a>
+        <a href="#services" class="nav-link">Services</a>
+        <a href="#process" class="nav-link">Process</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#contact" class="nav-link">Contact</a>
+    </div>
+
     <!-- Hero Section -->
     <section id="home" class="pt-24 pb-16 md:pt-32 md:pb-24">
         <div class="container mx-auto px-4">
