--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </nav>
 
-    <div class="mobile-menu md:hidden fixed inset-0 bg-white z-40 flex flex-col items-center justify-center space-y-8 text-2xl font-poppins font-bold transition-transform duration-300 translate-x-full">
+    <div class="mobile-menu md:hidden fixed inset-0 bg-white z-40 items-center justify-center space-y-8 text-2xl font-poppins font-bold transition-transform duration-300 translate-x-full">
         <button id="mobile-menu-close" class="absolute top-6 right-6 text-4xl text-anchor-navy" aria-label="Close menu">&times;</button>
         <div class="mobile-nav-links flex flex-col items-center space-y-8">
             <a href="#home" class="nav-link">Home</a>
