--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Local, reliable web-design for Fraser Coast small business. We build and host affordable, hassle-free websites for local cafés, tradies, and family businesses.">
+    <meta name="description" content="Local, reliable web-design for South East Queensland small business. We build and host affordable, hassle-free websites for local cafés, tradies, and family businesses across the Fraser Coast, Sunshine Coast, and Brisbane.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://anchorweb.co/">
     <meta property="og:title" content="Anchor Web Co. - Websites that keep your business grounded">
-    <meta property="og:description" content="Simple sites. Strong results. Local web design for Fraser Coast businesses.">
+    <meta property="og:description" content="Simple sites. Strong results. Local web design for South East Queensland businesses, including the Fraser Coast, Sunshine Coast, and Brisbane.">
     <meta property="og:image" content="https://anchorweb.co/img/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://anchorweb.co/">
     <meta property="twitter:title" content="Anchor Web Co. - Websites that keep your business grounded">
-    <meta property="twitter:description" content="Simple sites. Strong results. Local web design for Fraser Coast businesses.">
+    <meta property="twitter:description" content="Simple sites. Strong results. Local web design for South East Queensland businesses, including the Fraser Coast, Sunshine Coast, and Brisbane.">
     <meta property="twitter:image" content="https://anchorweb.co/img/og-image.jpg">
 
     <title>Anchor Web Co. - Websites that keep your business grounded</title>
@@ -157,9 +157,9 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div>
-                    <h2 class="text-3xl font-poppins font-bold mb-6">Local Roots, Global Reach</h2>
-                    <p class="mb-4">Founded by Matt Milzewski in Maryborough, Anchor Web Co. was born from a passion for helping Fraser Coast businesses thrive in the digital age.</p>
-                    <p>We believe that every local business deserves a professional online presence that reflects their unique story and connects them with their community.</p>
+                    <h2 class="text-3xl font-poppins font-bold mb-6">Local Roots, Regional Reach</h2>
+                    <p class="mb-4">Founded by Matt Milzewski in Maryborough, Anchor Web Co. was born from a passion for helping South East Queensland businesses thrive in the digital age.</p>
+                    <p>We believe that every local business in the Fraser Coast, Sunshine Coast, and Brisbane deserves a professional online presence that reflects their unique story and connects them with their community.</p>
                 </div>
                 <div class="relative">
                     <img src="img/fraser-coast.jpg" alt="Fraser Coast coastline" class="w-full rounded-lg">
