--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div class="mb-8">
                         <h3 class="text-xl font-poppins font-bold mb-4">Contact Details</h3>
                         <p class="mb-2">📞 0439 499 944</p>
-                        <p class="mb-2">📧 mattmilzewski@gmail.com</p>
+                        <p class="mb-2">📧 info@anchorwebco.com.au</p>
                         <p class="mb-4">📍 Maryborough, QLD</p>
                     </div>
                     <div class="map-container">
