--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
             </div>
         </div>
     </nav>
-
-    <div class="mobile-menu hidden md:hidden fixed inset-0 bg-white z-40 space-y-8 text-2xl font-poppins font-bold transition-transform duration-300 translate-x-full">
+    <!-- Mobile Menu Overlay -->
+    <div id="mobile-menu" class="fixed inset-0 z-50 bg-white bg-opacity-95 flex-col items-center justify-center space-y-8 text-2xl font-poppins font-bold hidden transition-all duration-300">
         <button id="mobile-menu-close" class="absolute top-6 right-6 text-4xl text-anchor-navy" aria-label="Close menu">&times;</button>
-        <div class="mobile-nav-links flex flex-col items-center space-y-8">
+        <nav class="flex flex-col items-center space-y-8 mt-12">
             <a href="#home" class="nav-link">Home</a>
             <a href="#services" class="nav-link">Services</a>
             <a href="#process" class="nav-link">Process</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#contact" class="nav-link">Contact</a>
-        </div>
+        </nav>
     </div>
 
     <!-- Hero Section -->
