update to add locks and security

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#services" class="nav-link">Services</a>
+                <a href="#portfolio" class="nav-link">Portfolio</a>
                 <a href="#process" class="nav-link">Process</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#contact" class="nav-link">Contact</a>
@@ -74,6 +75,7 @@
         <nav class="flex flex-col items-center space-y-8 mt-12">
             <a href="#home" class="nav-link">Home</a>
             <a href="#services" class="nav-link">Services</a>
+            <a href="#portfolio" class="nav-link">Portfolio</a>
             <a href="#process" class="nav-link">Process</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#contact" class="nav-link">Contact</a>
@@ -118,6 +120,25 @@
                     <div class="text-4xl mb-4">🔧</div>
                     <h3 class="text-xl font-poppins font-bold mb-2">Ongoing Maintenance</h3>
                     <p>Regular updates, security patches, and SEO optimizations to keep your site performing at its best.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="py-16">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-poppins font-bold text-center mb-12">Featured Work</h2>
+            <div class="max-w-2xl mx-auto">
+                <div class="bg-white rounded-lg shadow-lg p-8 text-center">
+                    <div class="mb-6">
+                        <img src="img/BHlocksandsecurity.png" alt="BH Lock and Security Logo" class="mx-auto max-h-24 object-contain">
+                    </div>
+                    <h3 class="text-xl font-poppins font-bold mb-4">BH Lock and Security</h3>
+                    <p class="text-gray-600 mb-6">SEO optimization and digital marketing strategy for this trusted local security business.</p>
+                    <a href="https://www.bhlockandsecurity.com/" target="_blank" rel="noopener" class="btn-primary">
+                        Visit Website
+                    </a>
                 </div>
             </div>
         </div>
