--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Local, reliable web-design for South East Queensland small business. We build and host affordable, hassle-free websites for local cafés, tradies, and family businesses across the Fraser Coast, Sunshine Coast, and Brisbane.">
+    <meta name="description" content="Professional website development and SEO services in Hervey Bay, Sunshine Coast, and Brisbane. We build and host affordable, hassle-free websites for local businesses with expert SEO optimization.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://anchorweb.co/">
-    <meta property="og:title" content="Anchor Web Co. - Websites that keep your business grounded">
-    <meta property="og:description" content="Simple sites. Strong results. Local web design for South East Queensland businesses, including the Fraser Coast, Sunshine Coast, and Brisbane.">
+    <meta property="og:title" content="Anchor Web Co. - Website Development & SEO Services">
+    <meta property="og:description" content="Professional website development and SEO services for Hervey Bay, Sunshine Coast, and Brisbane businesses. Local web design with expert SEO optimization.">
     <meta property="og:image" content="https://anchorweb.co/img/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://anchorweb.co/">
-    <meta property="twitter:title" content="Anchor Web Co. - Websites that keep your business grounded">
-    <meta property="twitter:description" content="Simple sites. Strong results. Local web design for South East Queensland businesses, including the Fraser Coast, Sunshine Coast, and Brisbane.">
+    <meta property="twitter:title" content="Anchor Web Co. - Website Development & SEO Services">
+    <meta property="twitter:description" content="Professional website development and SEO services for Hervey Bay, Sunshine Coast, and Brisbane businesses. Local web design with expert SEO optimization.">
     <meta property="twitter:image" content="https://anchorweb.co/img/og-image.jpg">
 
-    <title>Anchor Web Co. - Websites that keep your business grounded</title>
+    <title>Anchor Web Co. - Website Development & SEO Services | Hervey Bay, Sunshine Coast, Brisbane</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,10 +87,10 @@
         <div class="container mx-auto px-4">
             <div class="max-w-3xl">
                 <h1 class="text-4xl md:text-6xl font-poppins font-bold text-anchor-navy mb-4">
-                    Websites that keep your business grounded
+                    Professional Website Development & SEO Services
                 </h1>
-                <p class="text-xl md:text-2xl text-coast-sky mb-6">Simple sites. Strong results.</p>
-                <p class="text-lg mb-8">Mobile-ready, SEO-tuned, hosted on AWS S3.</p>
+                <p class="text-xl md:text-2xl text-coast-sky mb-6">Hervey Bay • Sunshine Coast • Brisbane</p>
+                <p class="text-lg mb-8">Mobile-ready websites with expert SEO optimization. Local web development that drives results.</p>
                 <div class="cta-container">
                     <div class="flex flex-col items-start space-y-4">
                         <a href="#contact" class="btn-primary">Get Your Free Site Audit</a>
@@ -104,22 +104,22 @@
     <!-- Services Section -->
     <section id="services" class="py-16 bg-white">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-poppins font-bold text-center mb-12">Our Services</h2>
+            <h2 class="text-3xl font-poppins font-bold text-center mb-12">Website Development & SEO Services</h2>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="service-card">
                     <div class="text-4xl mb-4">⚓️</div>
-                    <h3 class="text-xl font-poppins font-bold mb-2">Website Design & Build</h3>
-                    <p>Custom websites tailored to your business needs, built with modern standards and best practices.</p>
+                    <h3 class="text-xl font-poppins font-bold mb-2">Website Development</h3>
+                    <p>Custom website development tailored to your business needs. Professional web design for Hervey Bay, Sunshine Coast, and Brisbane businesses.</p>
                 </div>
                 <div class="service-card">
                     <div class="text-4xl mb-4">🌐</div>
-                    <h3 class="text-xl font-poppins font-bold mb-2">Domain + AWS Hosting</h3>
-                    <p>Secure, reliable hosting on AWS S3 with custom domain setup and SSL certification.</p>
+                    <h3 class="text-xl font-poppins font-bold mb-2">SEO Services</h3>
+                    <p>Expert SEO optimization to improve your search rankings. Local SEO services that help your business get found online.</p>
                 </div>
                 <div class="service-card">
                     <div class="text-4xl mb-4">🔧</div>
                     <h3 class="text-xl font-poppins font-bold mb-2">Ongoing Maintenance</h3>
-                    <p>Regular updates, security patches, and SEO optimizations to keep your site performing at its best.</p>
+                    <p>Regular updates, security patches, and SEO maintenance to keep your website performing at its best.</p>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                         <img src="img/BHlocksandsecurity.png" alt="BH Lock and Security Logo" class="mx-auto max-h-24 object-contain">
                     </div>
                     <h3 class="text-xl font-poppins font-bold mb-4">BH Lock and Security</h3>
-                    <p class="text-gray-600 mb-6">SEO optimization and digital marketing strategy for this trusted local security business.</p>
+                    <p class="text-gray-600 mb-6">Complete website development and SEO services optimization for this trusted local security business. Improved search rankings and online visibility.</p>
                     <a href="https://www.bhlockandsecurity.com/" target="_blank" rel="noopener" class="btn-primary">
                         Visit Website
                     </a>
@@ -178,9 +178,9 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div>
-                    <h2 class="text-3xl font-poppins font-bold mb-6">Local Roots, Regional Reach</h2>
-                    <p class="mb-4">Founded by Matt Milzewski in Maryborough, Anchor Web Co. was born from a passion for helping South East Queensland businesses thrive in the digital age.</p>
-                    <p>We believe that every local business in the Fraser Coast, Sunshine Coast, and Brisbane deserves a professional online presence that reflects their unique story and connects them with their community.</p>
+                    <h2 class="text-3xl font-poppins font-bold mb-6">Local Website Development & SEO Experts</h2>
+                    <p class="mb-4">Founded by Matt Milzewski in Maryborough, Anchor Web Co. specializes in website development and SEO services for businesses across Hervey Bay, Sunshine Coast, and Brisbane.</p>
+                    <p>We believe that every local business deserves professional website development with expert SEO optimization that helps them connect with their community and grow their online presence.</p>
                 </div>
                 <div class="relative">
                     <img src="img/fraser-coast.jpg" alt="Fraser Coast coastline" class="w-full rounded-lg">
