--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website Development & SEO Hervey Bay. Professional web design and SEO services for Sunshine Coast and Brisbane businesses. Local experts, affordable pricing.">
+    <meta name="description" content="Website Development & SEO Hervey Bay. Affordable, mobile-ready web design & local SEO for Sunshine Coast & Brisbane businesses. Experts you can trust.">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://anchorwebco.com.au/" />
