--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link">Contact</a>
+                <a href="contact.html" class="btn-primary ml-4">Get a Quote Now</a>
             </div>
         </div>
     </nav>
