--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,11 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                 </svg>
             </button>
-            <div class="hidden md:flex space-x-8">
+            <div class="hidden md:flex items-center space-x-8">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
+                <a href="contact.html" class="nav-button">Get a Quote Now</a>
             </div>
         </div>
     </nav>
