--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
             <div class="hidden md:flex items-center space-x-8">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
+                <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
                 <a href="contact.html" class="nav-button">Get a Quote Now</a>
             </div>
@@ -76,6 +77,7 @@
         <nav class="flex flex-col items-center space-y-8 mt-12">
             <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
+            <a href="blog.html" class="nav-link">Blog</a>
             <a href="contact.html" class="nav-link active">Contact</a>
         </nav>
     </div>
@@ -155,6 +157,7 @@
                     <ul class="space-y-2">
                         <li><a href="index.html" class="text-white hover:text-coast-sky">Home</a></li>
                         <li><a href="about.html" class="text-white hover:text-coast-sky">About</a></li>
+                        <li><a href="blog.html" class="text-white hover:text-coast-sky">Blog</a></li>
                         <li><a href="contact.html" class="text-white hover:text-coast-sky">Contact</a></li>
                     </ul>
                 </div>
