--- a/contact.html
+++ b/contact.html
@@ -189,5 +189,24 @@
       gtag('js', new Date());
       gtag('config', 'G-WZ5NKEMPNH');
     </script>
+    
+    <!-- Google tag (gtag.js) event - delayed navigation helper -->
+    <script>
+      // Helper function to delay opening a URL until a gtag event is sent.
+      // Call it in response to an action that should navigate to a URL.
+      function gtagSendEvent(url) {
+        var callback = function () {
+          if (typeof url === 'string') {
+            window.location = url;
+          }
+        };
+        gtag('event', 'conversion_event_submit_lead_form', {
+          'event_callback': callback,
+          'event_timeout': 2000,
+          // <event_parameters>
+        });
+        return false;
+      }
+    </script>
 </body>
 </html> 
