--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,8 @@
     <section class="py-16">
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-2 gap-8">
-                <form id="contact-form" class="space-y-4">
+                <form id="contact-form" action="https://formspree.io/f/xdkgalak" method="POST" class="space-y-4">
+                    <input type="hidden" name="_subject" value="New Contact Submission from Anchor Web Co." />
                     <div>
                         <label for="name" class="block mb-2">Name</label>
                         <input type="text" id="name" name="name" required class="w-full p-2 border rounded" autocomplete="name">
@@ -207,6 +208,46 @@
         });
         return false;
       }
+    </script>
+
+    <div id="thank-you-message" class="hidden text-green-600 text-lg font-bold mt-6">Thank you for contacting us! We'll be in touch soon.</div>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        var form = document.getElementById('contact-form');
+        var thankYou = document.getElementById('thank-you-message');
+        if (form) {
+          form.addEventListener('submit', function (e) {
+            e.preventDefault();
+            gtag('event', 'conversion_event_submit_lead_form', {
+              'event_callback': function () {
+                // Submit to Formspree after GA event
+                var formData = new FormData(form);
+                fetch(form.action, {
+                  method: 'POST',
+                  body: formData,
+                  headers: { 'Accept': 'application/json' }
+                })
+                .then(function (response) {
+                  if (response.ok) {
+                    form.reset();
+                    form.style.display = 'none';
+                    thankYou.classList.remove('hidden');
+                  } else {
+                    response.json().then(function (data) {
+                      alert(data.error || 'There was a problem submitting your form.');
+                    });
+                  }
+                })
+                .catch(function () {
+                  alert('There was a problem submitting your form.');
+                });
+              },
+              'event_timeout': 2000
+            });
+          });
+        }
+      });
     </script>
 </body>
 </html> 
