--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                     <div class="hidden">
                         <input type="text" name="company" tabindex="-1" autocomplete="off">
                     </div>
-                    <button type="submit" class="btn-primary">Send Message</button>
+                    <button type="submit" class="btn-primary contact-submit-btn">Send Message</button>
                 </form>
                 <div>
                     <div class="mb-8">
