--- a/contact.html
+++ b/contact.html
@@ -99,9 +99,8 @@
     <section class="py-16">
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-2 gap-8">
-                <form id="contact-form" action="https://formspree.io/f/xdkgalak" method="POST" class="space-y-4">
+                <form id="contact-form" class="space-y-4">
                     <input type="hidden" name="_subject" value="New Contact Submission from Anchor Web Co." />
-                    <input type="hidden" name="_next" value="https://anchorwebco.com.au/thank-you.html" />
                     <div>
                         <label for="name" class="block mb-2">Name</label>
                         <input type="text" id="name" name="name" required class="w-full p-2 border rounded" autocomplete="name">
