--- a/contact.html
+++ b/contact.html
@@ -191,6 +191,17 @@
       gtag('config', 'G-WZ5NKEMPNH');
     </script>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16766129889">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16766129889');
+    </script>
+    
     <!-- Google tag (gtag.js) event - delayed navigation helper -->
     <script>
       // Helper function to delay opening a URL until a gtag event is sent.
