--- a/thank-you.html
+++ b/thank-you.html
@@ -202,5 +202,12 @@
       gtag('js', new Date());
       gtag('config', 'G-WZ5NKEMPNH');
     </script>
+    
+    <!-- Google tag (gtag.js) event -->
+    <script>
+      gtag('event', 'conversion_event_contact', {
+        // <event_parameters>
+      });
+    </script>
 </body>
 </html> 
