--- a/blog.html
+++ b/blog.html
@@ -103,6 +103,21 @@
                 <!-- Blog Post 1 -->
                 <article class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <div class="p-6">
+                        <div class="text-sm text-coast-sky mb-2">January 29, 2025</div>
+                        <h2 class="text-xl font-poppins font-bold mb-3">
+                            <a href="blog-hervey-bay-seo-company.html" class="text-anchor-navy hover:text-coast-sky">Hervey Bay SEO Company: Why Choose Anchor Web Co.</a>
+                        </h2>
+                        <p class="text-gray-600 mb-4">Discover why Anchor Web Co. is the leading SEO Hervey Bay provider helping local businesses dominate search results and attract more customers in the Fraser Coast region.</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-gray-500">8 min read</span>
+                            <a href="blog-hervey-bay-seo-company.html" class="text-coast-sky hover:text-anchor-navy font-medium">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Blog Post 2 -->
+                <article class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <div class="p-6">
                         <div class="text-sm text-coast-sky mb-2">January 27, 2025</div>
                         <h2 class="text-xl font-poppins font-bold mb-3">
                             <a href="blog-local-seo-hervey-bay.html" class="text-anchor-navy hover:text-coast-sky">Local SEO Strategies for Hervey Bay Businesses</a>
