--- a/index.html
+++ b/index.html
@@ -132,16 +132,28 @@
     <section id="portfolio" class="py-16">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-poppins font-bold text-center mb-12">Featured Work</h2>
-            <div class="max-w-2xl mx-auto">
-                <div class="bg-white rounded-lg shadow-lg p-8 text-center">
-                    <div class="mb-6">
-                        <img src="img/bh-lock.webp" alt="BH Lock and Security - Professional locksmith and security services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
+            <div class="max-w-4xl mx-auto">
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="bg-white rounded-lg shadow-lg p-8 text-center">
+                        <div class="mb-6">
+                            <img src="img/bh-lock.webp" alt="BH Lock and Security - Professional locksmith and security services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
+                        </div>
+                        <h3 class="text-xl font-poppins font-bold mb-4">BH Lock and Security</h3>
+                        <p class="text-gray-600 mb-6">Complete website development and SEO services optimization for this trusted local security business. Improved search rankings and online visibility.</p>
+                        <a href="https://www.bhlockandsecurity.com/" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                            Visit Website
+                        </a>
                     </div>
-                    <h3 class="text-xl font-poppins font-bold mb-4">BH Lock and Security</h3>
-                    <p class="text-gray-600 mb-6">Complete website development and SEO services optimization for this trusted local security business. Improved search rankings and online visibility.</p>
-                    <a href="https://www.bhlockandsecurity.com/" target="_blank" rel="noopener noreferrer" class="btn-primary">
-                        Visit Website
-                    </a>
+                    <div class="bg-white rounded-lg shadow-lg p-8 text-center">
+                        <div class="mb-6">
+                            <img src="img/favicon-mower.png" alt="Maryborough Mowerman - Professional lawn care and garden maintenance services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
+                        </div>
+                        <h3 class="text-xl font-poppins font-bold mb-4">Maryborough Mowerman</h3>
+                        <p class="text-gray-600 mb-6">Professional website design and development for this local lawn care business. Modern, mobile-responsive design with clear service information and contact details.</p>
+                        <a href="https://maryboroughmowerman.com.au/" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                            Visit Website
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
