--- a/blog.html
+++ b/blog.html
@@ -103,6 +103,21 @@
                 <!-- Featured Blog Post -->
                 <article class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <div class="p-6">
+                        <div class="text-sm text-coast-sky mb-2">July 20, 2025</div>
+                        <h2 class="text-xl font-poppins font-bold mb-3">
+                            <a href="blog-tradies-websites-more-jobs.html" class="text-anchor-navy hover:text-coast-sky">How Tradies Can Get Websites to Book More Jobs</a>
+                        </h2>
+                        <p class="text-gray-600 mb-4">Discover how professional websites combined with SEO Hervey Bay and website design Maryborough services can help tradies across the Fraser Coast attract more customers and book more jobs online.</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-gray-500">8 min read</span>
+                            <a href="blog-tradies-websites-more-jobs.html" class="text-coast-sky hover:text-anchor-navy font-medium">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Blog Post -->
+                <article class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <div class="p-6">
                         <div class="text-sm text-coast-sky mb-2">January 31, 2025</div>
                         <h2 class="text-xl font-poppins font-bold mb-3">
                             <a href="blog-seo-hervey-bay-fraser-coast.html" class="text-anchor-navy hover:text-coast-sky">SEO Hervey Bay: Fraser Coast Business Success Stories</a>
