gtag update plus console fixes

--- a/blog-website-design-guide.html
+++ b/blog-website-design-guide.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Complete website design guide for small businesses. Learn essential design principles, best practices, and tips to create effective websites that convert visitors.">
-    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-website-design-guide" />
+    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-website-design-guide.html" />
     <link rel="icon" type="image/png" sizes="180x180" href="icons/favicon-180.png">
     
     <!-- Open Graph / Facebook -->
@@ -207,13 +207,13 @@
     <script src="js/main.js" defer></script>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ5NKEMPNH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16766129889"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-WZ5NKEMPNH');
+      gtag('config', 'AW-16766129889');
     </script>
 </body>
 </html>
