--- a/blog-seo-hervey-bay-fraser-coast.html
+++ b/blog-seo-hervey-bay-fraser-coast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SEO Hervey Bay: How Fraser Coast businesses are dominating Google search results. Learn proven SEO strategies that work for tourism, retail, and service businesses in the Hervey Bay region.">
-    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast" />
+    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast.html" />
     <link rel="icon" type="image/png" sizes="180x180" href="icons/favicon-180.png">
     
     <!-- Open Graph / Facebook -->
@@ -284,13 +284,13 @@
     <script src="js/main.js" defer></script>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ5NKEMPNH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16766129889"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-WZ5NKEMPNH');
+      gtag('config', 'AW-16766129889');
     </script>
 </body>
 </html>
