--- a/blog-website-speed-optimization.html
+++ b/blog-website-speed-optimization.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn how website speed affects your SEO rankings and discover practical tips to improve your site's loading times for better user experience.">
-    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-website-speed-optimization" />
+    <link rel="canonical" href="https://www.anchorwebco.com.au/blog-website-speed-optimization.html" />
     <link rel="icon" type="image/png" sizes="180x180" href="icons/favicon-180.png">
     
     <!-- Open Graph / Facebook -->
@@ -420,12 +420,13 @@
     <script src="js/main.js" defer></script>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ5NKEMPNH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16766129889"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-WZ5NKEMPNH');
+
+      gtag('config', 'AW-16766129889');
     </script>
 </body>
 </html> 
